--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
     <header>
@@ -26,6 +26,7 @@
     </section>
 
     <section id="details">
+
       <div>
         <h3>Contact</h3>
         <p>
@@ -60,7 +61,7 @@
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </div>
+            </div>
     </section>
   </body>
 </html>
